backend/api-gateway/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: betselot456/api-gateway:0.0.1-SNAPSHOT-c6baa5d
        ports:
        - containerPort: 8080
